# snp_pipeline

./: .git-branches.toml  .gitignore  ideas.txt  pyproject.toml  testc  uvc
.devcontainer/: devcontainer.json
container/: Containerfile
src/reads_pipeline/: __init__.py  fastp.py  fastp_minimap.py  gatk.py  genomic_pipeline.py  paths.py  pipeline_config.py  read_group.py  read_stats.py  run_cmd.py  run_fastp_minimap.py  script_check_mapping.py  script_check_read_groups_to_map.py  script_collect_mapping_stats.py  script_create_gatk_db.py  script_create_gatk_joint_vcf.py  script_create_gatk_joint_vcfs_per_segment.py  script_create_genome_intervals_for_gatk.py  script_do_per_sample_snv_calling.py  script_do_var_joining_per_segment.py  script_merge_gvcf_variant_ranges.py  script_merge_per_segment_vcfs.py  script_prepare_gatk_sample_var_joining_segments.py  script_prepare_var_joining_segements.py  script_run_mapping.py  utils_file_system.py
src/snp_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: config.py  test_check_read_groups.py  test_collect_mapping_stats.py  test_gatk.py  test_genomic_pipeline.py  test_prepare_var_joining_segments.py  test_run_fastp_minimap.py  test_run_stats.py  test_var_ranges.py
test/data/project1/: reads.xls
test/data/project2/: pipeline.toml  reads.xls  tomato_SL12_400000_700000.fasta  tomato_SL12_400000_700000.fasta.fai  tomato_SL12_400000_700000.fasta.mmi
test/data/project3/: genomexyztest.fasta  genomexyztest.fasta.fai  genomexyztest.fasta.mmi  pipeline.toml
test/data/project4/: fastp.html  fastp.json  genomexyztest.fasta  genomexyztest.fasta.fai  genomexyztest.fasta.mmi  pipeline.toml  reads.xls
test/data/project5/: SL4.0ch01_13486265-13488265.fasta  SL4.0ch01_13486265-13488265.fasta.fai  pipeline.toml
test/data/project6/: SL4.0ch01_13486265-13488265.fasta.bed  pipeline.toml
test/data/project6/snv_calling/vcfs_per_sample/: sample1.g.vcf.gz.tbi
test/data/project7/: SL4.0ch01_13486265-13488265.dict  SL4.0ch01_13486265-13488265.mmi
