[project]
name = "reads-pipeline"
description = "Pipeline to clean and map reads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "xlrd>=2.0.1",
]
# We're setting the version using hatch-vcs
dynamic = ["version"]

[project.scripts]
run_mapping = "reads_pipeline.script_run_mapping:main"
collect_mapping_stats = "reads_pipeline.script_collect_mapping_stats:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "pytest>=8.3.4",
]
