[project]
name = "reads-pipeline"
description = "Pipeline to clean and map reads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "split-gvcf",
    "xlrd>=2.0.1",
]
# We're setting the version using hatch-vcs
dynamic = ["version"]

[project.scripts]
run_mapping = "reads_pipeline.script_run_mapping:main"
collect_mapping_stats = "reads_pipeline.script_collect_mapping_stats:main"
do_per_sample_snv_calling = "reads_pipeline.script_do_per_sample_snv_calling:main"
create_gatk_db = "reads_pipeline.script_create_gatk_db:main"
check_read_groups_to_map = "reads_pipeline.script_check_read_groups_to_map:main"
create_gatk_joint_vcfs_per_segment = "reads_pipeline.script_create_gatk_joint_vcfs_per_segment:main"
prepare_gatk_sample_var_joining_segments = "reads_pipeline.script_prepare_gatk_sample_var_joining_segments:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
run-in-container = { git = "https://github.com/JoseBlanca/run_in_container.git" }
split-gvcf = { git = "https://github.com/JoseBlanca/split-gvcf.git" }

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "pytest>=8.3.4",
    "run-in-container>=0.1.1",
]

[tool.run_in_container]
container_template_name = "reads_pipeline"
